<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/rightDrawerScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="9dp"
                android:paddingTop="36dp"
                android:text="@string/filter_options"
                android:textColor="@color/ListText"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/number_of_books"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/filter_title" />

                <RadioGroup
                    android:id="@+id/RadioGroupBookPerPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <RadioButton
                        android:id="@+id/BpP10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/book_per_page1"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BpP20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_per_page2"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BpP30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_per_page3"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BpP40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_per_page4"
                        android:textColor="@color/ListText" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/sort_by"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/filter_title" />

                <RadioGroup
                    android:id="@+id/RadioGroupSortBy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <RadioButton
                        android:id="@+id/SB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/order_by1"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/SB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_by2"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/SB3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_by3"
                        android:textColor="@color/ListText" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/type_of_books"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/filter_title" />

                <RadioGroup
                    android:id="@+id/RadioGroupBookType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <RadioButton
                        android:id="@+id/BT1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/type_of_books1"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BT2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_books2"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BT3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_books3"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BT4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_books4"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BT5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_books5"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/BT6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_books6"
                        android:textColor="@color/ListText" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/print_type"
                    android:textColor="@color/ListText"
                    android:textSize="@dimen/filter_title" />

                <RadioGroup
                    android:id="@+id/RadioGroupPrintType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <RadioButton
                        android:id="@+id/PT1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/print_type1"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/PT2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print_type2"
                        android:textColor="@color/ListText" />

                    <RadioButton
                        android:id="@+id/PT3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print_type3"
                        android:textColor="@color/ListText" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:text="Apply"
                android:textColor="@color/ListText"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>