<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/book_stack" />

        <TextView
            android:id="@+id/nav_bar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/email"
            android:background="@color/textBackGroundColor"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:shadowColor="@color/shadowtextColor"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/show_name"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textTitleColor"
            android:textSize="@dimen/nav_header_Title_Text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/nav_title_bottom_spacing"
            android:background="@color/textBackGroundColor"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:shadowColor="@color/shadowtextColor"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/email"
            android:textAlignment="viewEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/nav_header_Text"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/ListItemLine"
        android:textSize="@dimen/smallText" />

    <ImageView
        android:id="@+id/sendMail"
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email"/>

</LinearLayout>
